--- a/assets/style.css
+++ b/assets/style.css
@@ -9,3 +9,12 @@
     text-align: center;
     color: white;
 }
+
+#currentWeather {
+    height: 300px;
+    margin-bottom: 15px;
+}
+
+.card-body {
+    min-height: 150px;
+}
