--- a/assets/style.css
+++ b/assets/style.css
@@ -28,11 +28,17 @@
 }
 
 
-
 .fiveDay {
     background-color: thistle;
 }
 
 .mainBody {
-    width: 95%;
+    width: 90%;
+}
+
+#savedBtn {
+    background-color: pink;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
