--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 #header {
-    background-color: slategrey;
+    background-color: #0B253A;
     height: 100px;
     margin-bottom: 20px;
     padding-top: 20px;
@@ -17,28 +17,65 @@
 
 #historyBtn {
     width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    border: lightgray solid 1px ;
+    margin-top: 5px;
+    background-color:#ff6500;
 }
 
 .card-body {
     min-height: 150px;
-    background-color: thistle;
+    background-color: #539DB3;
     margin: 2px;
 }
 
 
-.fiveDay {
-    background-color: thistle;
-}
-
 .mainBody {
-    width: 90%;
+    width: 100%;
 }
 
-#savedBtn {
-    background-color: pink;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+
+#cityTitle {
+    font-size: larger;
+    text-decoration: underline;
 }
+
+#currentWeather {
+    text-align: center;
+    line-height: 40px;
+}
+
+.forecastArea {
+    width: 100%;
+}
+
+@media only screen and (max-width: 770px) {
+    .searchArea {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+    #city-input {
+        background-color: lightgray;
+    }
+
+    #fiveDayForecast {
+        width: 50%;
+        float: none;
+    }
+
+    @media only screen and (max-width: 500px) {
+        .searchArea {
+            float: none;
+            width: 100%;
+            text-align: center;
+        }
+        #city-input {
+            background-color: lightgray;
+        }
+    
+        #fiveCards {
+            width: 100%;
+            float: none;
+
+
+        }}}
